[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
colorama = ">=0.4.5"
fastapi = ">=0.89.1"
httpx = ">=0.24.0"
requests = ">=2.28.2"
urllib3 = ">=1.26.9"
uvicorn = ">=0.20.0"
journal-logger = {path = "../journal-logger", develop = true}
morse-decoder-encoder = {path = "../morse-decoder-encoder", develop = true}
whatever-disentangler = {path = "../whatever-disentangler", develop = true}
url-unescape = {path = "../url_tools/url_unescape", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
